--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     /* 表格居中 */
     table {
         margin:0 auto;
+        background-image: url(3.webp);
+        background-size: cover;
+        background-position: center;
     }
     td {
       width: 100px;
